--- a/WebStore.csproj
+++ b/WebStore.csproj
@@ -31,4 +31,8 @@
     <PackageReference Include="Scrutor.AspNetCore" Version="3.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain.csproj" />
+  </ItemGroup>
+
 </Project>
