--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=WebStoreDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "JwtTokenParametrs": {
+    "Issuer": "Veco",
+    "Audience": "User",
+    "Secret": "fwegwg343gwf23t2xrt35tdw35yq34t54ueg5ywdswr4t34",
+    "RefreshIntervalAccessTokenInMinutes": 15
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
