--- a/WebStore.csproj
+++ b/WebStore.csproj
@@ -52,6 +52,7 @@
     <PackageReference Include="FluentValidation" Version="10.3.3" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.3" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="10.3.3" />
+    <PackageReference Include="Google.Cloud.Translate.V3" Version="2.4.0" />
     <PackageReference Include="Innofactor.EfCoreJsonValueConverter" Version="2.0.2" />
     <PackageReference Include="Innofactor.EfCoreJsonValueConverter.Attributes" Version="2.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.13" />
