--- a/compilerconfig.json
+++ b/compilerconfig.json
@@ -46,5 +46,9 @@
   {
     "outputFile": "Pages/Shared/Loader.razor.css",
     "inputFile": "Pages/Shared/Loader.razor.scss"
+  },
+  {
+    "outputFile": "Pages/OrderRegistration.razor.css",
+    "inputFile": "Pages/OrderRegistration.razor.scss"
   }
 ]
