--- a/WebStore.csproj
+++ b/WebStore.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <PackageReference Include="Blazored.LocalStorage" Version="4.1.5" />
     <PackageReference Include="Blazored.SessionStorage" Version="2.2.0" />
+    <PackageReference Include="BlazorPagination" Version="0.2.16" />
     <PackageReference Include="BuildWebCompiler" Version="1.12.394" />
     <PackageReference Include="FluentValidation" Version="10.3.3" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.3" />
